# signal-watch

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
config/: channels.yaml
prompts/: summarize.md
scripts/: generate_digest.py  poll.py  run_signal_watch.sh
src/: __init__.py  config.py  database.py  main.py  models.py  utils.py
src/api/: __init__.py  routes.py
src/processors/: __init__.py  dedup.py  summarize.py  transcript.py
src/sources/: __init__.py  youtube.py
src/storage/: __init__.py  repository.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_utils.py  test_youtube.py
